Rename a few files; Get the end to end RDE creation working for both Resources and Components

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -9,6 +9,7 @@
 //= require archival_object.crud
 //= require rights_statements.crud
 //= require detect_form_changes
+//= require rde
 
 $(function() {
   $.fn.init_resource_form = function() {
