--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -123,7 +123,7 @@
     <td class="control-group">
       <div class="btn-group">
         <button class="btn btn-success add-row"><span class="icon-plus icon-white"></span></button>
-        <button class="btn btn-danger remove-row"><span class="icon-remove icon-white"></span></button>
+        <button class="btn remove-row"><span class="icon-remove"></span></button>
       </div>
     </td>
   </tr>
@@ -181,10 +181,19 @@
         <p>
           <button class="btn btn-small btn-success add-row">Add Row</button>
         </p>
-        <div class="well" style="width:340px;">
-          <div><strong>Keyboard Shortcuts</strong></div>
-          <div><small><span class="span2">Jump from cell to cell:</span>SHIFT + Arrow Keys</small></div>
-          <div><small><span class="span2">Create a new row:</span> SHIFT + Return</small></div>
+        <div class="row">
+          <div class="well span12">
+            <div class="span5">
+              <div><strong>Keyboard Shortcuts</strong></div>
+              <div><small><span class="span2">Jump from cell to cell:</span>SHIFT + Arrow Keys</small></div>
+              <div><small><span class="span2">Create a new row (from last row):</span> SHIFT + Return</small></div>
+            </div>
+            <div class="span6">
+              <div><strong>Sticky Columns</strong></div>
+              <div><small>Highlighted columns are sticky and will be replicated when new rows are added. Toggle 'sticky' by clicking the corresponding table heading.</small></div>
+              <div><small>Clicking 'Add Row' will copy values from the last row; The row's '+' button will copy values from the currently focused row.</small></div>
+            </div>
+          </div>
         </div>
       <% end %>
     <% end %>
