Darken sticky header styles; Add-row from a row will add a row after the current row (no longer only at the end); Rearranged barcode column;

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -762,7 +762,7 @@ ul.subrecord-form-list {
     cursor: pointer;
 
     &.sticky {
-      #gradient > .vertical(#f0f7fa, #dcf1fa);
+      #gradient > .vertical(#dcf1fa, #caecfa);
     }
     &:hover {
       background-color: @tableBackgroundHover;
