--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -336,8 +336,10 @@ h4 > .context-help {
 /* import stats */
 
 #import-results {
-  margin-left: 5px;
-  background-color: #FFFF99;
+}
+
+#import-results .import-results-row p{
+  margin-bottom: 2px;
 }
 
 .import-errors {
