Add resizable columns to RDE and persist in a cookie

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -367,3 +367,19 @@ h4 > .context-help {
 .btn-mini > .caret {
   margin-top: 8px;
 }
+
+.ui-resizable {
+  position: relative;
+}
+.ui-resizable-e {
+  cursor: e-resize;
+  width: 7px;
+  right: -5px;
+  top: 0;
+  height: 100%;
+}
+.ui-resizable-handle {
+  position: absolute;
+  font-size: 0.1px;
+  display: block;
+}
