--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -129,6 +129,7 @@
   </tr>
 <% end %>
 
+<%= stylesheet_link_tag "archivesspace/rde" %>
 <div class="rde-wrapper">
   <div class="modal-body">
     <%= form_for @archival_record_children, :as => :archival_record_children, :url => {:controller => @parent.jsonmodel_type.pluralize, :action => :add_children, :id => @parent.id}, :html => {:class => 'form-horizontal', :id => 'rde_form'} do |f| %>
@@ -136,31 +137,64 @@
 
         <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
-        <table class="table table-striped table-bordered table-condensed">
+        <table class="table table-striped table-bordered table-condensed" style="width: auto; margin-right: 20px;">
+          <colgroup>
+            <col class="status"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="fieldset-col"/>
+            <col class="actions"/>
+          </colgroup>
           <thead>
-          <tr>
+          <tr class="sections">
             <th/>
-            <th class="sticky"><%= I18n.t("archival_object.level") %></th>
-            <th class="sticky"><%= I18n.t("archival_object.publish") %></th>
-            <th><%= I18n.t("archival_object.title") %></th>
-            <th class="sticky"><%= I18n.t("rde.date_type") %></th>
-            <th class="sticky"><%= I18n.t("date.expression") %></th>
-            <th class="sticky"><%= I18n.t("date.begin") %></th>
-            <th class="sticky"><%= I18n.t("date.end") %></th>
-            <th class="sticky"><%= I18n.t("rde.instance_type") %></th>
-            <th class="sticky"><%= I18n.t("container.type_1") %></th>
-            <th class="sticky"><%= I18n.t("container.indicator_1") %></th>
-            <th class="sticky"><%= I18n.t("container.barcode_1") %></th>
-            <th><%= I18n.t("container.type_2") %></th>
-            <th><%= I18n.t("container.indicator_2") %></th>
-            <th><%= I18n.t("container.type_3") %></th>
-            <th><%= I18n.t("container.indicator_3") %></th>
-            <th><%= I18n.t("note._singular") %></th>
-            <th><%= I18n.t("note_attributes.content") %></th>
-            <th><%= I18n.t("note._singular") %></th>
-            <th><%= I18n.t("note_attributes.content") %></th>
-            <th><%= I18n.t("note._singular") %></th>
-            <th><%= I18n.t("note_attributes.content") %></th>
+            <th colspan="3">Basic Information</th>
+            <th colspan="4">Date</th>
+            <th colspan="8">Instance</th>
+            <th colspan="6">Notes</th>
+            <th/>
+          </tr>
+          <tr class="fieldset-labels">
+            <th/>
+            <th class="fieldset-label sticky"><%= I18n.t("archival_object.level") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("archival_object.publish") %></th>
+            <th class="fieldset-label"><%= I18n.t("archival_object.title") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("rde.date_type") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("date.expression") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("date.begin") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("date.end") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("rde.instance_type") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("container.type_1") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("container.indicator_1") %></th>
+            <th class="fieldset-label sticky"><%= I18n.t("container.barcode_1") %></th>
+            <th class="fieldset-label"><%= I18n.t("container.type_2") %></th>
+            <th class="fieldset-label"><%= I18n.t("container.indicator_2") %></th>
+            <th class="fieldset-label"><%= I18n.t("container.type_3") %></th>
+            <th class="fieldset-label"><%= I18n.t("container.indicator_3") %></th>
+            <th class="fieldset-label"><%= I18n.t("note._singular") %></th>
+            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %></th>
+            <th class="fieldset-label"><%= I18n.t("note._singular") %></th>
+            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %></th>
+            <th class="fieldset-label"><%= I18n.t("note._singular") %></th>
+            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %></th>
             <th></th>
           </tr>
           </thead>
