Add Classification/Term frontend as per Resource/Component

--- a/frontend/app/views/shared/_tree.html.erb
+++ b/frontend/app/views/shared/_tree.html.erb
@@ -50,7 +50,27 @@
         :record_label => I18n.t("digital_object_component._singular")
       },
       :can_move => true
-   }
+    },
+    :classification => {
+      :can_add_child => {
+        :type => :classification_term,
+        :action_label =>  I18n.t("classification._frontend.action.add_child"),
+        :record_label => I18n.t("classification_term._singular")
+      }
+    },
+    :classification_term => {
+      :can_add_child => {
+        :type => :classification_term,
+        :action_label =>  I18n.t("classification_term._frontend.action.add_child"),
+        :record_label => I18n.t("classification_term._singular")
+      },
+      :can_add_sibling => {
+        :type => :classification_term,
+        :action_label =>  I18n.t("classification_term._frontend.action.add_sibling"),
+        :record_label => I18n.t("classification_term._singular")
+      },
+      :can_move => true
+    }
  }
 
 %>
