Add agent linker to classification/term forms;

--- a/frontend/app/views/classifications/_form_container.html.erb
+++ b/frontend/app/views/classifications/_form_container.html.erb
@@ -16,6 +16,10 @@
       <%= form.label_and_textfield "title" %>
       <%= form.label_and_textarea "description" %>
 
+      <% form.push("creator", form["creator"] || {}) do %>
+        <%= render :partial => "agents/linker", :locals => {:form => form} %>
+      <% end %>
+
     </section>
   <% end %>
 
