--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -696,9 +696,9 @@ $(function() {
             var nodeEl = $("#" + nodeId, $tree);
             $tree.jstree("rename_node", nodeEl, data.title);
 
-            if (data.level.length > 0 && $(" > a > .badge", nodeEl).length > 0) {
+            if (data.level && data.level.length > 0 && $(" > a > .badge", nodeEl).length > 0) {
               $(" > a > .badge", nodeEl).html(data.level);
-            } else if (data.level.length > 0) {
+            } else if (data.level && data.level.length > 0) {
               nodeEl.find("a").append($('<span class="badge"></span>').text(data.level));
             } else {
               $(" > a > .badge", nodeEl).remove();
