--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -164,6 +164,13 @@
   background-position: -168px -24px !important;
 }
 
+.classification > a > .jstree-icon,
+.icon-classification,
+.classification_term > a > .jstree-icon,
+.icon-classification_term {
+  background-position: 0 -48px !important;
+}
+
 .archives-tree-container.expanded {
   .box-shadow(1px 1px 5px rgba(0, 0, 0, 0.4));
   .opacity(95);
