Change the classification icon

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -165,7 +165,10 @@
 }
 
 .classification > a > .jstree-icon,
-.icon-classification,
+.icon-classification {
+  background-position: -25px -48px !important;
+}
+
 .classification_term > a > .jstree-icon,
 .icon-classification_term {
   background-position: 0 -48px !important;
