--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -137,40 +137,46 @@
 
         <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
+        <p>
+          <button class="btn btn-small btn-success add-row">Add Row</button>
+          <select id="rde_hidden_columns" multiple="multiple"></select>
+          <a href="#" id="rde_reset" class="btn btn-small">Reset</a>
+        </p>
+
         <table class="table table-striped table-bordered table-condensed" style="width: auto; margin-right: 20px;">
           <colgroup>
-            <col class="status"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="fieldset-col"/>
-            <col class="actions"/>
+            <col class="status" data-default-width='20' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='70' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="actions" data-default-width='90' />
           </colgroup>
           <thead>
           <tr class="sections">
-            <th/>
+            <th colspan="1"></th>
             <th colspan="3">Basic Information</th>
             <th colspan="4">Date</th>
             <th colspan="8">Instance</th>
             <th colspan="6">Notes</th>
-            <th/>
+            <th colspan="1"></th>
           </tr>
           <tr class="fieldset-labels">
             <th/>
@@ -189,12 +195,12 @@
             <th class="fieldset-label"><%= I18n.t("container.indicator_2") %></th>
             <th class="fieldset-label"><%= I18n.t("container.type_3") %></th>
             <th class="fieldset-label"><%= I18n.t("container.indicator_3") %></th>
-            <th class="fieldset-label"><%= I18n.t("note._singular") %></th>
-            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %></th>
-            <th class="fieldset-label"><%= I18n.t("note._singular") %></th>
-            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %></th>
-            <th class="fieldset-label"><%= I18n.t("note._singular") %></th>
-            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %></th>
+            <th class="fieldset-label"><%= I18n.t("note._singular") %> 1</th>
+            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %> 1</th>
+            <th class="fieldset-label"><%= I18n.t("note._singular") %> 2</th>
+            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %> 2</th>
+            <th class="fieldset-label"><%= I18n.t("note._singular") %> 3</th>
+            <th class="fieldset-label"><%= I18n.t("note_attributes.content") %> 3</th>
             <th></th>
           </tr>
           </thead>
