--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -8,6 +8,7 @@ $(function() {
     $container = $("#object_container");
 
   if (AS.tree_data && $tree.length) {
+
     var config = {
       root_object_id: AS.tree_data.id,
       root_node_type: AS.tree_data.node_type,
@@ -463,12 +464,15 @@ $(function() {
 
     };
 
-
-    var moveNode = function(nodeEl, targetNodelEl, newIndex) {
+    var lastMoveData;
+    var moveNode = function(nodeEl, targetNodelEl, newIndex, jstreeMoveData) {
       var parent_id = "";
+      lastMoveData = jstreeMoveData;
+
       if (nodeEl.attr("rel") === targetNodelEl.attr("rel")) {
         parent_id = targetNodelEl.data("id");
       }
+
       $.ajax({
         url: APP_PATH+nodeEl.attr("rel")+"s/"+nodeEl.data("id")+"/parent",
         type: "POST",
@@ -493,6 +497,14 @@ $(function() {
 
           var selectedNode = $tree.jstree("get_selected");
           $("#"+selectedNode.attr("rel")+"_position_", $container).val(selectedNode.index());
+        },
+        error: function(jqXHR, textStatus, errorThrown) {
+          // Rollback the last move.
+          $.jstree.rollback(lastMoveData.rlbk);
+
+          // show a modal message
+          //alert(jqXHR.responseText);
+          AS.openQuickModal(jqXHR.responseText, "alert alert-error");
         }
       });
     }
@@ -662,7 +674,7 @@ $(function() {
             setHashForNode($nodeToSelect.find("a").attr("href"));
           }
         }).bind("move_node.jstree", function(event, data) {
-          moveNode(data.rslt.o, data.rslt.cr, data.rslt.o.index());
+          moveNode(data.rslt.o, data.rslt.cr, data.rslt.o.index(), data);
         }).bind("refreshtreenode.aspace", function(event, data) {
 
           var nodeId = data.jsonmodel_type+"_"+data.id;
