Format messages for move conflict

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -503,8 +503,7 @@ $(function() {
           $.jstree.rollback(lastMoveData.rlbk);
 
           // show a modal message
-          //alert(jqXHR.responseText);
-          AS.openQuickModal(jqXHR.responseText, "alert alert-error");
+          AS.openQuickModal(AS.renderTemplate("tree_unable_to_move_message_template"), jqXHR.responseText);
         }
       });
     }
