--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -12,7 +12,7 @@
 
 <div id="modal_quick_template"><!--
   <div class="modal-body">
-    <div class="${messageClass}">${message}</div>
+    ${message}
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal"><%= I18n.t "actions.continue" %></button>
