--- a/frontend/app/views/shared/_tree.html.erb
+++ b/frontend/app/views/shared/_tree.html.erb
@@ -240,6 +240,10 @@
       <%= I18n.t ("actions.revert") %>
     --></div>
 
+    <div id="tree_unable_to_move_message_template"><!--
+      <%= I18n.t ("actions.unable_to_move_message") %>
+    --></div>
+
   <% end  %>
 
   <div id="tree_loading_notice_template"><!--
