Patch up show-inline to deal with missing creator fields

--- a/frontend/app/views/classification_terms/_show_inline.html.erb
+++ b/frontend/app/views/classification_terms/_show_inline.html.erb
@@ -14,12 +14,14 @@
           <%= readonly.label_and_textarea "title" %>
           <%= readonly.label_and_textarea "description" %>
 
-          <div class="token-list">
-            <%= readonly.label_with_field(:creator, render_token(:object => readonly,
-                                                         :label => readonly["creator"]["_resolved"]["names"][0]["sort_name"],
-                                                         :type => readonly["creator"]["_resolved"]["agent_type"],
-                                                         :uri => readonly["creator"]["_resolved"]["uri"])) %>
-          </div>
+          <% if !readonly["creator"].blank? %>
+            <div class="token-list">
+                <%= readonly.label_with_field(:creator, render_token(:object => readonly,
+                                                             :label => readonly["creator"]["_resolved"]["names"][0]["sort_name"],
+                                                             :type => readonly["creator"]["_resolved"]["agent_type"],
+                                                             :uri => readonly["creator"]["_resolved"]["uri"])) %>
+            </div>
+          <% end %>
         </section>
       <% end %>
     </div>
