Re-format error messages on RDE and I18n all labels

--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -84,7 +84,8 @@
             <div class="errors-for-attribute">
               <% messages.each do |msg| %>
                 <div class="error"
-                     data-target="<%= form.id_for_javascript(attr) %>">
+                     data-target="<%= form.id_for_javascript(attr) %>"
+                     data-message="<%= h(msg) %>">
                   <% if attr === 'coded_errors' %>
                     <%# Special errors that we pull from the YML instead of inserting verbatim %>
                     <%= I18n.t(form.path(msg)) %>
