--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -138,9 +138,9 @@
         <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
         <p>
-          <button class="btn btn-small btn-success add-row">Add Row</button>
-          <select id="rde_hidden_columns" multiple="multiple"></select>
-          <a href="#" id="rde_reset" class="btn btn-small">Reset</a>
+          <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
+          <select id="rde_hidden_columns" multiple="multiple" data-i18n-prefix="<%= I18n.t("rde.actions.showhide_prefix") %>" data-i18n-suffix="<%= I18n.t("rde.actions.showhide_suffix") %>" data-i18n-none="<%= I18n.t("rde.actions.showhide_none") %>"></select>
+          <a href="#" id="rde_reset" class="btn btn-small"><%= I18n.t("rde.actions.reset") %></a>
         </p>
 
         <table class="table table-striped table-bordered table-condensed" style="width: auto; margin-right: 20px;">
@@ -172,10 +172,10 @@
           <thead>
           <tr class="sections">
             <th colspan="1"></th>
-            <th colspan="3">Basic Information</th>
-            <th colspan="4">Date</th>
-            <th colspan="8">Instance</th>
-            <th colspan="6">Notes</th>
+            <th colspan="3"><%= I18n.t("rde.sections.basic_information") %></th>
+            <th colspan="4"><%= I18n.t("rde.sections.date") %></th>
+            <th colspan="8"><%= I18n.t("rde.sections.instance") %></th>
+            <th colspan="6"><%= I18n.t("rde.sections.notes") %></th>
             <th colspan="1"></th>
           </tr>
           <tr class="fieldset-labels">
@@ -219,19 +219,15 @@
           </tbody>
         </table>
         <p>
-          <button class="btn btn-small btn-success add-row">Add Row</button>
+          <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
         </p>
         <div class="row">
           <div class="well span12">
             <div class="span5">
-              <div><strong>Keyboard Shortcuts</strong></div>
-              <div><small><span class="span2">Jump from cell to cell:</span>SHIFT + Arrow Keys</small></div>
-              <div><small><span class="span2">Create a new row (from last row):</span> SHIFT + Return</small></div>
+              <%= I18n.t("rde.help.keyboard_shortcuts") %>
             </div>
             <div class="span6">
-              <div><strong>Sticky Columns</strong></div>
-              <div><small>Highlighted columns are sticky and will be replicated when new rows are added. Toggle 'sticky' by clicking the corresponding table heading.</small></div>
-              <div><small>Clicking 'Add Row' will copy values from the last row; The row's '+' button will copy values from the currently focused row.</small></div>
+              <%= I18n.t("rde.help.sticky_columns") %>
             </div>
           </div>
         </div>
@@ -239,7 +235,7 @@
     <% end %>
   </div>
   <div class="modal-footer">
-    <button id="saveChangesButton" class="btn btn-primary">Add Children</button>
+    <button id="saveChangesButton" class="btn btn-primary"><%= I18n.t("rde.actions.submit") %></button>
     <button class="btn btn-cancel" data-dismiss="modal"><%= I18n.t "actions.cancel" %></button>
   </div>
 </div>
