--- a/frontend/app/views/classifications/_linker.html.erb
+++ b/frontend/app/views/classifications/_linker.html.erb
@@ -22,7 +22,7 @@
             data-selected="<%= selected_json %>"
             data-format_property="title"
             data-multiplicity="one"
-            data-types='["classification"]'
+            data-types='["classification", "classification_term"]'
             data-exclude='<%= exclude_ids.to_json %>'
           />
          <div class="btn-group dropdown pull-right">
