--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -101,6 +101,18 @@
           </ul>
           <ul class="nav pull-right">
             <li><%= link_to I18n.t("navbar.list_reports"), :controller => :reports, :action => :index %></li>
+
+            <% if Plugins.plugins? %>
+              <li class="dropdown plugin-container">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("navbar.plugins") %> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <% Plugins.list.each do |plugin| %>
+                    <li><%= link_to I18n.t("plugins.#{plugin}.label"), :controller => plugin.intern, :action => :index %></li>
+                  <% end %>
+                </ul>
+              </li>
+            <% end %>
+
             <li class=" dropdown repo-container">
               <div <% if user_can?('manage_repository') %>class="input-append"<% end %>>
                 <span class="inset-label">
