--- a/frontend/app/views/user_defined/_template.html.erb
+++ b/frontend/app/views/user_defined/_template.html.erb
@@ -1,15 +1,24 @@
 <% define_template("user_defined", jsonmodel_definition(:user_defined)) do |form| %>
+      <%= form.obj['date_1'].inspect %>
       <%= form.label_and_boolean "boolean_1", {}, form.default_for("boolean_1") %>
       <%= form.label_and_boolean "boolean_2", {}, form.default_for("boolean_2") %>
+      <%= form.label_and_boolean "boolean_3", {}, form.default_for("boolean_3") %>
       <%= form.label_and_textfield "integer_1" %>
       <%= form.label_and_textfield "integer_2" %>
+      <%= form.label_and_textfield "integer_3" %>
       <%= form.label_and_textfield "real_1" %>
       <%= form.label_and_textfield "real_2" %>
+      <%= form.label_and_textfield "real_3" %>
+      <%= form.label_and_date "date_1", {:field_opts => {:placeholder => "YYYY-MM-DD", :value => form.obj['date_1'].blank? ? "" : Date.strptime(form.obj['date_1'], "%Y-%m-%d")}} %>
+      <%= form.label_and_date "date_2", {:field_opts => {:placeholder => "YYYY-MM-DD", :value => form.obj['date_2'].blank? ? "" : Date.strptime(form.obj['date_2'], "%Y-%m-%d")}} %>
+      <%= form.label_and_date "date_3", {:field_opts => {:placeholder => "YYYY-MM-DD", :value => form.obj['date_3'].blank? ? "" : Date.strptime(form.obj['date_3'], "%Y-%m-%d")}} %>
       <%= form.label_and_textfield "string_1" %>
       <%= form.label_and_textfield "string_2" %>
       <%= form.label_and_textfield "string_3" %>
+      <%= form.label_and_textfield "string_4" %>
       <%= form.label_and_textarea "text_1" %>
       <%= form.label_and_textarea "text_2" %>
       <%= form.label_and_textarea "text_3" %>
       <%= form.label_and_textarea "text_4" %>
+      <%= form.label_and_textarea "text_5" %>
 <% end %>
