--- a/frontend/app/views/classification_terms/_form_container.html.erb
+++ b/frontend/app/views/classification_terms/_form_container.html.erb
@@ -21,7 +21,7 @@
       <%= form.label_and_textarea "description" %>
 
       <% form.push("creator", form["creator"] || {}) do %>
-        <%= render :partial => "agents/linker", :locals => {:form => form} %>
+        <%= render :partial => "agents/linker", :locals => {:form => form, :linker_label => I18n.t("classification.creator")} %>
       <% end %>
 
     </section>
