--- a/frontend/app/views/classifications/index.html.erb
+++ b/frontend/app/views/classifications/index.html.erb
@@ -5,7 +5,7 @@
      <%= render :partial => "search/filter" %>
    </div>
    <div class="span9">
-     <% if user_can?('update_archival_record') %>
+     <% if user_can?('update_classification_record') %>
        <div class="row-fluid">
          <div class="span12">
            <div class="record-toolbar">
